<resources>
    <string name="app_name">EcoPlant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage_title">EcoPlant</string>
    <string name="scanner_button">Scanner Button</string>
    <string name="settings_button">Settings</string>
    <string name="my_parcels_button">My Parcels</string>
    <string name="map_button">Map</string>
    <string name="history_button">History</string>
    <string name="search_button">Search</string>
    <string name="join_communities">Join communities</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="return_to_the_home_page">Return to the home page</string>
    <string name="take_a_photo_from_your_gallery">Take a photo from your gallery</string>
    <string name="close_menu">Close menu</string>
    <string name="select_bark">Select bark</string>
    <string name="select_flower">Select flower</string>
    <string name="select_leaf">Select leaf</string>
    <string name="select_fruit">Select fruit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="know_more">Know more</string>
    <string name="image_of_the_photo_taken">Image of the photo taken</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="parcelle">Parcelle :</string>
    <string name="description">Description :</string>
    <string name="lorem_ipsum_test_1">Suspendisse lectus tellus, posuere sit amet dignissim mollis, laoreet sed dolor. Sed et metus ut elit sagittis ultrices egestas id orci. Fusce elit lectus, aliquet ac ligula ac, egestas placerat velit. Sed faucibus rutrum luctus. Fusce eleifend velit in metus interdum, quis pharetra orci tincidunt. Aliquam pretium at eros vitae pellentesque. Proin tempor ipsum a purus blandit, in pellentesque risus.</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="plantnet_api_key">PLANTNET_API_KEY</string>
    <string name="account">Account ;</string>
    <string name="new_user_name">New user name :</string>
    <string name="change">Change</string>
    <string name="delete_account">Delete Account</string>
    <string name="go_back">Go back</string>
    <string name="name">Name</string>
    <string name="my_parcels">My Parcels</string>
    <string name="services">Services</string>
    <string name="minimum_fiability_score">Minimum fiability score</string>
    <string name="public_">public</string>
    <string name="private_">private</string>
    <string name="manage_users">Manage Users</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="create_a_new_parcel">Create a new parcel</string>
    <string name="find_parcels">Find Parcels</string>
    <string name="search_parcels">Search parcels</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="parcel_name">Parcel name :</string>
    <string name="parcel_coordinate">Parcel coordinate</string>
    <string name="_43_633881_3_865066">43.633881, 3.865066</string> <!-- Should be replace with a real value store in a secret  -->
</resources>