<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:minWidth="300dp"
    android:background="@drawable/alert_rounded_background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/joti_one"
        android:textColorHint="@color/black"
        android:hint="@string/parcel_name"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/parcel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_background"
        android:fontFamily="@font/joti_one"
        android:hint="@string/name"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:paddingHorizontal="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/private_"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="end"
            android:fontFamily="@font/joti_one"/>

        <!-- Switch au milieu -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/visibility_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:thumbTint="@color/safety_orange"
            android:trackTint="@color/rich_black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/public_"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="start"
            android:fontFamily="@font/joti_one"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/joti_one"
        android:textColorHint="@color/black"
        android:hint="@string/parcel_coordinate"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/parcel_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_background"
        android:fontFamily="@font/joti_one"
        android:hint="@string/_43_633881_3_865066"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:digits="0123456789.,-() "/>


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/joti_one"
            android:hint="@string/cancel"
            android:textAllCaps="false"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/confirm_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/sage_green"
            android:fontFamily="@font/joti_one"
            android:hint="@string/confirm"
            android:textAllCaps="false"
            android:textColorHint="@color/light_cream" />
    </LinearLayout>
</LinearLayout>