<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/joti_one"
        android:hint="@string/account"
        android:textColorHint="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/joti_one"
        android:hint="@string/new_user_name"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_background"
        android:backgroundTintMode="@color/white"
        android:fontFamily="@font/joti_one"
        android:hint="old user name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_user_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_background_low"
        android:backgroundTint="@color/yellow_color"
        android:fontFamily="@font/joti_one"
        android:hint="@string/change"
        android:textColorHint="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_background_low"
        android:backgroundTint="@color/bordeau_color"
        android:fontFamily="@font/joti_one"
        android:hint="@string/logout"
        android:textColorHint="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/delete_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_background_low"
        android:backgroundTint="@color/bordeau_color"
        android:fontFamily="@font/joti_one"
        android:hint="@string/delete_account"
        android:textColorHint="@color/light_cream"
        android:textSize="25sp" />
</LinearLayout>