<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:minWidth="300dp"
    android:background="@drawable/alert_rounded_background"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/joti_one"
            android:textColorHint="@color/black"
            android:hint="@string/parcelle"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/parcel_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_background_low"
            android:backgroundTint="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/joti_one"
            android:textColorHint="@color/black"
            android:hint="@string/description"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:fadeScrollbars="false"
            android:scrollbarThumbVertical="@color/brown_color"
            android:background="@drawable/rounded_background_low"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/parcelle_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:fontFamily="@font/joti_one"
                android:textSize="18sp"
                android:hint="@string/lorem_ipsum_test_1"/>
        </ScrollView>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:textSize="26sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/joti_one"
                android:hint="@string/cancel"
                android:textAllCaps="false"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/confirm_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:textSize="26sp"
                android:textStyle="bold"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/sage_green"
                android:fontFamily="@font/joti_one"
                android:hint="@string/confirm"
                android:textAllCaps="false"
                android:textColorHint="@color/light_cream" />
        </LinearLayout>
</LinearLayout>